bin/dot2dot.jjt
options
{
LOOKAHEAD=1;
STATIC = false;
MULTI = true;
}
PARSER_BEGIN(Dot2Dot)
import java.io.*;


public class Dot2Dot
{
  
public static void main(String args[]) throws ParseException,IOException {
	  String dataLine = "";
        String temp = "";
        
        File inFile = new File(args[0]);
        BufferedReader bf = null;
		try {
			bf = new BufferedReader(new InputStreamReader (new FileInputStream(inFile)));
		} catch (FileNotFoundException e1) {
			// TODO Auto-generated catch block
			e1.printStackTrace();
		}
    
			while((dataLine=bf.readLine()) != null){
					temp += dataLine;
			 }
        try {
			bf.close();
		} catch (IOException e) {
			// TODO Auto-generated catch block
			e.printStackTrace();
		}
        
        InputStream input = new ByteArrayInputStream(temp.getBytes());

        Dot2Dot dot2dot = new Dot2Dot(input);
	SimpleNode root = dot2dot.DotGraph(); // devolve refer�ncia para o n� raiz da �rvore
	root.insereNos(""); // imprime no ecr� a �rvore
	root.drawGraph(args[0]);
	System.out.println("\n\n\n");
	}
}
PARSER_END(Dot2Dot)

SKIP :
{
  //Semicolons aid readability but are not required except in the rare case that a named subgraph
  //with no body immediately preceeds an anonymous subgraph
  " " | "\r" | "\t" |"\0"
}

// defini��o dos tokens (s�mbolos terminais)
TOKEN:
{
  //What comes after this token is ignored if it is preceded by a <LF>
  < CARDINAL: "#" >
}

TOKEN [IGNORE_CASE] :
{	
  <GRAPH: "graph"> |
  < DIGRAPH : "digraph" >|
  < STRICT: "strict" > |
  < ATTR_SMT:  "node" | "edge" > |
  < SUBGRAPH: "subgraph" >
}
TOKEN :
{
  < COMPASS_PT: "n" | "ne" | "e" | "se" | "s" | "sw" | "w" | "nw" | "c" | "_" >
}

TOKEN :
{
  < NODE: "node" >
}
TOKEN :
{
  //TODO ID use cases incomplete
  < ID:  (<INTEGER>)+ | (<STRING>)  | ((["a"-"z","A"-"Z","_","#"])+ (<INTEGER>)?)+ >   
}

TOKEN :
{
 < INTEGER : (["0" - "9"])(["0" - "9"])* >
 | < LF : "\n" >
}

TOKEN:    
{
  	< EDGEOP_DIRECTED: "->" > |
  	< EDGEOP_UNDIRECTED: "--" >
}

TOKEN :
{
  < LBRACKET: "{"> |
  < RBRACKET: "}" > |
  < LSQBRACK: "[" > |
  < RSQBRACK: "]" > |
  < COLON: ":" > |
  < SEMICOLON: ";" > |
  < EQUALS: "=" > |
  < COMMA: "," > |
  < DOT: "." >   |
  < DOUBLE_BACKSLASH: "\\" > |
  < SLASH : "/" >  |
  < MAIOR : ">" >  |
  < LESS: "<" >    |
  < LPARENTHESIS: "(" >  |
  < RPARENTHESIS: ")" >  |
  < MINUS: "-" >  |
  < PLUS: "+" >   |
  < PLICA: "\'"> 
}

TOKEN :
{
 < SYMBOLS: <DOT> | <DOUBLE_BACKSLASH> | <SLASH> | <LBRACKET> | <RBRACKET> | <LSQBRACK> | <RSQBRACK> |
 <COLON> | <SEMICOLON> | <EQUALS> | <COMMA> | <MAIOR> | <LESS> | <LPARENTHESIS> | <RPARENTHESIS>  |
 <MINUS> | <PLUS> | <PLICA> >
}


TOKEN :
{
 < STRING: ("\"") ( (<INTEGER>)? | ( (<INTEGER>)? ((["a"-"z","A"-"Z","_","#"," "])?(<SYMBOLS>)?)+ (<INTEGER>)?)+) ("\"") >
}
SimpleNode DotGraph(): {} 
{
	Graph() {return jjtThis;} // c�digo Java entre chavetas
}

void GraphID(): { Token id = null;}
{
    [ id = < ID >]
    
  { jjtThis.value = id.image; 
  	System.out.println("id.image" + " " + id.image); } 
}


void Graph(): {Token graph = null; }
{
  [< STRICT >] (graph = <GRAPH> | graph = < DIGRAPH >) GraphID()  < LBRACKET > [Stmt_list()] < RBRACKET >
  
  { jjtThis.value = graph.image; 
  	System.out.println("graph.image" + " " + graph.image); } 
}



void Stmt_list() #void: {}
{
  Stmt() [< SEMICOLON >] [Stmt_list()] 
}

void Stmt() #void: {}
{
	 Attr_smt()
	| Subgraph()
	| Nova()


/*	Node_stmt()|
	Edge_stmt()
	| Attr_smt()
	| < ID > < EQUALS > < ID >
	| Subgraph()  */
}
void Nova(): {Token id = null;}
{
  id = < ID > (< EQUALS > <ID > | Edge_stmt_temp())
  { jjtThis.value = id.image; }  
}


/*
void Node_stmt(): {}
{
  Node_id()[Attr_list()]
}*/

void Edge_stmt_temp() #void: {}
{
	[Port()] (Temo() | [Attr_list()])
}
void Edge_stmt(): {}
{
  Edge_stmt_temp() | (Subgraph() Temo()) 
     
 /* [Node_id() | Subgraph()] EdgeRHS() [Attr_list()] */
}

void Attr_smt() #void: {}
{
  (<GRAPH> |< ATTR_SMT >) Attr_list()
}

void Node_id(): {Token id;}
{	
  id = < ID > [Port()]
  { jjtThis.value = id.image; }
}

void Attr_list() #void: {}
{
  < LSQBRACK > [Attr_type()] < RSQBRACK > [Attr_list()] 
}

void Attr_type():{Token attr=null;}
{
	attr = < ID > {jjtThis.value = attr.image; }
	A_list()
}

void A_list(): {Token attr = null;}
{
	< EQUALS > attr = < ID > [< COMMA >] [Attr_type()]	
	 { jjtThis.value = attr.image; }
}

void Subgraph(): {}
{
	[< SUBGRAPH > [< ID >]] < LBRACKET > Stmt_list() < RBRACKET >
}

void Temo() #void: {}
{
  EdgeRHS() [Attr_list()]
}

void EdgeRHS()#void: { }
{
  ( Directed()
  |  Undirected() ) (Node_id() | Subgraph()) [EdgeRHS()]
}

void Directed(): {Token directed = null;}
{
  directed = < EDGEOP_DIRECTED > { jjtThis.value = directed.image; } }

void Undirected(): {Token undirected = null;}
{
  undirected = < EDGEOP_UNDIRECTED > { jjtThis.value = undirected.image; }
}

void Port(): {}
{
  < COLON > ( < ID > [< COLON > < COMPASS_PT >] | < COMPASS_PT > )
}









